# ResumeBuilder

./: .gitignore  README.md  app.py  build_resume.py  models.py  profile.sample.json  profile.sample.v2.json  pyproject.toml  requirements.txt  setup.sh  setup_mos_mapping.sh  start_backend.sh  start_streamlit.sh  template.sample.json
components/: __init__.py  landing_page.py  live_preview.py  live_preview_backup.py  live_preview_clean.py  step4_new.py
data/: MOS Mapping.xlsx  README.md
services/: ai_service.py  docx_utils.py  mapping_service.py  resume_generator.py  resume_service.py
utils/: config.py  configure_openai.py  logging_utils.py  resume_preview.py  validation.py
